fix z-index layer in last section

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ button[aria-expanded="true"] .menu-icon span:nth-child(3) {
   background-image: url(../image/full/full-8-1.jpeg);
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
 }
 #home .overlay {
   background-color: rgba(0, 0, 0, 0.5);
@@ -272,9 +273,7 @@ button[aria-expanded="true"] .menu-icon span:nth-child(3) {
 }
 /* end Testimonials princing */
 /* Start Blog*/
-#Blog .inner .card{
-  z-index: -1;
-} 
+
 #Blog .card a i {
   transition: var(--animation-duration);
 }
